@@ -317,6 +317,24 @@ const field_value Dataset::get_field_value(const char *f_name) {
   //return fv;
 }
 
+const field_value Dataset::get_field_value(int index) {
+  if (ds_state != dsInactive) {
+    if (ds_state == dsEdit || ds_state == dsInsert){
+      if (index <0 || index >field_count())
+        throw DbErrors("Field index not found: %d",index);
+
+      return (*edit_object)[index].val;
+    }
+    else
+      if (index <0 || index >field_count())
+        throw DbErrors("Field index not found: %d",index);
+
+      return (*fields_object)[index].val;
+  }
+  throw DbErrors("Dataset state is Inactive");
+  //field_value fv;
+  //return fv;
+}
 
 const field_value Dataset::f_old(const char *f_name) {
   if (ds_state != dsInactive)
